src/objects/Agreement__c.object
<CustomObject>
    <description>MSA&apos;s agreement terms</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The prime client on the contract.</inlineHelpText>
        <label>Billing Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Billing Client)</relationshipLabel>
        <relationshipName>AgreementsEndClient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionCode__c</fullName>
        <description>C = Create
U = Update</description>
        <inlineHelpText>C = Create
U = Update</inlineHelpText>
        <label>Action Code</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AgreementAmountEstimated__c</fullName>
        <description>Enter the estimated value of the agreement (in the Agreement Currency)</description>
        <inlineHelpText>Enter the estimated value of the agreement (in the Agreement Currency)</inlineHelpText>
        <label>Agreement Amount (Estimated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AgreementExecutedBy2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Executed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AgreementsExecutedBy2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgreementExecutedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the name of the person who executed the contract</description>
        <inlineHelpText>Select the name of the person who executed the contract</inlineHelpText>
        <label>Agreement Executed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgreementFundingVariance__c</fullName>
        <formula>Amount__c - TotalFundingAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement - Funding Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AgreementNumber__c</fullName>
        <description>This is a unique identifier assigned to all Agreement Records in Ecosystem.  Use this reference for Contract Reviews.</description>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AgreementOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the name of the person responsibility for managing this agreement - typically the Project Manager, but may be Client Manager, Area Manager or another AECOM team member.</description>
        <inlineHelpText>Select the name of the person responsibility for managing this agreement - typically the Project Manager, but may be Client Manager, Area Manager or another AECOM team member.</inlineHelpText>
        <label>Agreement Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AgreementsOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgreementStatus__c</fullName>
        <label>Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AgreementType__c</fullName>
        <description>Select the contract type from a master list of contract types available in the drop down list.</description>
        <inlineHelpText>Select the contract type from a master list of contract types available in the drop down list.</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agreement for the Transfer of Digital Model Files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ Industry Standard (AS4122, IPENZ/ACENZ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Design Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural Design Services Agreement (Transnational)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Conditions of Use Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash on Delivery Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client (Day1) Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Authorization to Proceed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Data Confidentiality Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditions of Engagement for Accredited Design Verification Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidentiality Agreement/Deed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction / EPC Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services Agreement (Transnational)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services Subcontract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services Subcontract (Transnational)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Confidentiatlity Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deed Poll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Engineering Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Information Consent and Acknowledgement Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics Services Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics Services Agreement (Transnational)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Data Licence Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Design Services (Transnational)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Services Consultant Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIDIC 2006 Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIDIC Sub Consultancy Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indefinite Deliverable/Indefinite Quantity (ID/IQ)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Contractor Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AgreementVariance__c</fullName>
        <formula>Amount__c -  TotalApprovedRevenueLimit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AgreementsMSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreements MSA</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (MSA)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Once executed, populate the current total confirmed agreement amount</description>
        <inlineHelpText>Once executed, populate the current total confirmed agreement amount</inlineHelpText>
        <label>Agreement Amount (Confirmed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApprovedChanges__c</fullName>
        <label>Approved Changes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BacktoBackwithPrime__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the sub contract is back-to-back with the Prime Contract with the client</inlineHelpText>
        <label>Back-to-Back with Prime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessDevelopmentAttachment__c</fullName>
        <label>BusinessDevelopmentAttachment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChangeManagerApprovedForSynch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Manager Approved For Synch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientContractReferenceNo__c</fullName>
        <description>Enter the Clients reference number (if applicable)</description>
        <inlineHelpText>Enter the Clients reference number (if applicable)</inlineHelpText>
        <label>Client Contract Reference No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialStructure__c</fullName>
        <label>Commercial Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommericialTermsDescription__c</fullName>
        <label>Commericial Terms Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommericialTermsOther__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Other (please describe below)</inlineHelpText>
        <label>Commericial Terms (Other)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommericialTerms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>In accordance with the AECOM Transfer Pricing Policy, the Lead Consultant will be charged FBLR+5% on all labor inputs by the Subconsultant. Refer to the AECOM Manual of Financial &amp; Accounting Policies &amp; Practices #3170</inlineHelpText>
        <label>Commericial Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractAttachment__c</fullName>
        <label>ContractAttachment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContractReviewRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContractReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Agreements (Contract Reviewer)</relationshipLabel>
        <relationshipName>AgreementsContractReviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractTitle__c</fullName>
        <description>Enter a Title or Name of the Contract</description>
        <inlineHelpText>Enter a Title or Name of the Contract</inlineHelpText>
        <label>Contract Title/Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractingAgency__c</fullName>
        <inlineHelpText>Enter the name of the agency managing or procuring the contract, if different from the client name.  This is typically relevant for government clients.</inlineHelpText>
        <label>Contracting Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreationDate__c</fullName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentApprovedContractValue__c</fullName>
        <label>Current Approved Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DelegateProject__c</fullName>
        <formula>Project__c</formula>
        <label>Delegate Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Provide a one or two sentence description of the contract.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExcecutedbyForAECOM__c</fullName>
        <label>Excecuted by (For AECOM)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExecutionDate__c</fullName>
        <description>Enter the date when the contract was executed</description>
        <inlineHelpText>Enter the date when the contract was executed</inlineHelpText>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>The date at which the contract expires</description>
        <inlineHelpText>The date at which the contract expires</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FeeType__c</fullName>
        <description>Select the type of Fee Structure which applies to this agreement</description>
        <inlineHelpText>Select the type of Fee Structure which applies to this agreement</inlineHelpText>
        <label>Fee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time &amp; Materials - with a guaranteed maximum price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discounted rate with success fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentivised Fee Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other - Please describe in the comments below</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Cross Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule of Rates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FundingCurrencyCode__c</fullName>
        <description>Select the currency of the agreement</description>
        <inlineHelpText>Select the currency of the agreement</inlineHelpText>
        <label>Agreement Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GuidanceAttachment__c</fullName>
        <label>GuidanceAttachment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IntercoProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interco Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Agreements (Interco Project)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntercompanySubconsultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Subconsultant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Intercompany Subconsultant)</relationshipLabel>
        <relationshipName>AgreementsIntSubconsultant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InterimApprovalComments__c</fullName>
        <label>Interim Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InterimApprovalCostLimit__c</fullName>
        <label>Interim Approval Cost Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InterimApprovalDate__c</fullName>
        <label>Interim Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InterimApprovalExpiryDate__c</fullName>
        <label>Interim Approval Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InterimApprovalRevenueFeeLimit__c</fullName>
        <label>Interim Approval Revenue/Fee Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InterimApprovalType__c</fullName>
        <label>Interim Approval Type</label>
        <picklist>
            <picklistValues>
                <fullName>DoA - Work at Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim Agreement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvoiceLimitFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Limit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InvoicingClient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the name of the client entity from the contract and should match to the billing customer(s) on the project</description>
        <inlineHelpText>This is the name of the client entity from the contract and should match to the billing customer(s) on the project</inlineHelpText>
        <label>Invoicing Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Invoicing Client)</relationshipLabel>
        <relationshipName>AgreementsInvoicingClient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMSA__c</fullName>
        <formula>IF( RecordType.Name == &quot;Prime (MSA)&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is MSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTaskOrder__c</fullName>
        <formula>IF( RecordType.Name == &quot;Prime Task Order&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Task Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JointVenturePartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Venture Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreements (Joint Venture Partner)</relationshipLabel>
        <relationshipName>Agreements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSAReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Search and select the MSA that applies to the contract.  If no MSA, then leave blank</description>
        <inlineHelpText>Search and select the MSA that applies to the contract.  If no MSA, then leave blank</inlineHelpText>
        <label>MSA Reference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agreement__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Prime (MSA)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agreements (MSA Reference)</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MasterServicesAgreementRef__c</fullName>
        <label>Master Services Agreement Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MeetingMinutesAttachment__c</fullName>
        <label>MeetingMinutesAttachment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OUIDLegacy__c</fullName>
        <label>OUID Legacy</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUID__c</fullName>
        <formula>if(OR(ISNULL(OUIDLegacy__c), ISBLANK(OUIDLegacy__c)), Project__r.OUID__c, OUIDLegacy__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleAgreementID__c</fullName>
        <description>This is the Agreement number as it will be populated into Oracle, typically this will be the same as the Oracle Project Number</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the Agreement number as it will be populated into Oracle, typically this will be the same as the Oracle Project Number</inlineHelpText>
        <label>Oracle Agreement ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending
T = Transfer (Success)
E = Error
S = Successful</description>
        <inlineHelpText>P = Pending
T = Transfer (Success)
E = Error
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OracleSynchAgreementType__c</fullName>
        <formula>IF(OR( RecordType.Name == &apos;Prime&apos;, RecordType.Name == &apos;Prime Task Order&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Synch Agreement Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderingPeriodEnd__c</fullName>
        <label>Ordering Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderingPeriodStart__c</fullName>
        <label>Ordering Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderingPeriod__c</fullName>
        <description>Enter the start and end dates of the contract.</description>
        <label>Ordering Period</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OriginalContractValue__c</fullName>
        <label>Original Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OwningOrganizationID__c</fullName>
        <label>Owning Organization ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select if any parent agreement is applicable (e.g. standing contract, JV, prime contract for back-to-back with subs)</description>
        <inlineHelpText>Select if any parent agreement is applicable (e.g. standing contract, JV, prime contract for back-to-back with subs)</inlineHelpText>
        <label>Parent Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agreement__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Child Agreements</relationshipLabel>
        <relationshipName>AgreementsParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>IMMEDIATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20th Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay on Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PendingChangeOrders__c</fullName>
        <label>Pending Change Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PnLManager__c</fullName>
        <formula>Project__r.PnLManager__c</formula>
        <label>PnL Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialPerformanceBonus__c</fullName>
        <label>Potential Performance Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProfIndemnityLiabilityAmt__c</fullName>
        <inlineHelpText>Enter the total value of Professional Indemnity/Liability nominated in the contract</inlineHelpText>
        <label>Prof Indemnity/Liability Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProgramPlanAttachment__c</fullName>
        <label>ProgramPlanAttachment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectAgreementRecordCount__c</fullName>
        <label>ProjectAgreementRecordCount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProjectTeamMember__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProjectTeamMember__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>AgreementsProject</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>